osd/PrimaryLogPG: skip deleted missing objects in pg[n]ls

Fixes: http://tracker.ceph.com/issues/20739
Signed-off-by: Josh Durgin <jdurgin@redhat.com>
(cherry picked from commit 561760455663831d6145f17c014b902ede7d1840)